--- a/css/styles.css
+++ b/css/styles.css
@@ -13,6 +13,10 @@ body {
   margin: auto;
 }
 
+.hidden {
+  display: none !important;
+}
+
 .container {
   max-width: 1200px;
   min-width: 320px;
